[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/title.png" type="Texture" id=1]
[ext_resource path="res://Shaders/shader1.tres" type="Material" id=2]
[ext_resource path="res://TwistedImage.gd" type="Script" id=3]

[node name="TwistedImage" type="Node2D"]
script = ExtResource( 3 )
width = 500

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 500, 270 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="GUI" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 1024.0
margin_bottom = 501.0

[node name="topbuffer" type="MarginContainer" parent="GUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 400.0
rect_min_size = Vector2( 20, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 404.0
margin_right = 1024.0
margin_bottom = 424.0

[node name="playpause" type="Button" parent="GUI/VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
text = "Pause"

[node name="reveal" type="Button" parent="GUI/VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Done"

[node name="Questions" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 428.0
margin_right = 1024.0
margin_bottom = 448.0

[node name="1" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_right = 167.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"

[node name="2" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "2"

[node name="3" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "3"

[node name="4" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_left = 513.0
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "4"

[node name="5" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_left = 685.0
margin_right = 852.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "5"

[node name="6" type="Button" parent="GUI/VBoxContainer/Questions"]
margin_left = 856.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "6"

[node name="Questions2" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 452.0
margin_right = 1024.0
margin_bottom = 472.0

[node name="7" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_right = 167.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "7"

[node name="8" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "8"

[node name="9" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "9"

[node name="10" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_left = 513.0
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "10"

[node name="11" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_left = 685.0
margin_right = 852.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "11"

[node name="12" type="Button" parent="GUI/VBoxContainer/Questions2"]
margin_left = 856.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "12"

[node name="Questions3" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 476.0
margin_right = 1024.0
margin_bottom = 496.0

[node name="13" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_right = 167.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "13"

[node name="14" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "14"

[node name="15" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "15"

[node name="16" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_left = 513.0
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "16"

[node name="17" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_left = 685.0
margin_right = 852.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "17"

[node name="18" type="Button" parent="GUI/VBoxContainer/Questions3"]
margin_left = 856.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "18"

[connection signal="texture_changed" from="Sprite" to="." method="_on_Sprite_texture_changed"]
[connection signal="toggled" from="GUI/VBoxContainer/HBoxContainer/playpause" to="." method="_on_playpause_toggled"]
[connection signal="pressed" from="GUI/VBoxContainer/HBoxContainer/reveal" to="." method="_on_reveal_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/1" to="." method="_on_button_pressed" binds= [ "1" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/2" to="." method="_on_button_pressed" binds= [ "2" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/3" to="." method="_on_button_pressed" binds= [ "3" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/4" to="." method="_on_button_pressed" binds= [ "4" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/5" to="." method="_on_button_pressed" binds= [ "5" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions/6" to="." method="_on_button_pressed" binds= [ "6" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/7" to="." method="_on_button_pressed" binds= [ "7" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/8" to="." method="_on_button_pressed" binds= [ "8" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/9" to="." method="_on_button_pressed" binds= [ "9" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/10" to="." method="_on_button_pressed" binds= [ "10" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/11" to="." method="_on_button_pressed" binds= [ "11" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions2/12" to="." method="_on_button_pressed" binds= [ "12" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/13" to="." method="_on_button_pressed" binds= [ "13" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/14" to="." method="_on_button_pressed" binds= [ "14" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/15" to="." method="_on_button_pressed" binds= [ "15" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/16" to="." method="_on_button_pressed" binds= [ "16" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/17" to="." method="_on_button_pressed" binds= [ "17" ]]
[connection signal="pressed" from="GUI/VBoxContainer/Questions3/18" to="." method="_on_button_pressed" binds= [ "18" ]]
